--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" @boardTrig>
   <div #e [id]="block" *ngFor="let block of boardArray" (click)="onClick(e)">
     <app-cross [isActive]="isClick[block]" [isCompActive]="isCompSelected[block]"></app-cross>
   </div>
